Bug 262599 - evaluateJavaScript:inFrame: doesn't work with site isolation
Summary: evaluateJavaScript:inFrame: doesn't work with site isolation
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Process Model (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Charlie Wolfe
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-10-03 20:40 PDT by Charlie Wolfe
Modified: 2023-10-03 23:21 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Charlie Wolfe 2023-10-03 20:40:20 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-10-03 20:40:35 PDT
<rdar://problem/116442151>
Comment 2 Charlie Wolfe 2023-10-03 20:46:26 PDT
Pull request: https://github.com/WebKit/WebKit/pull/18605
Comment 3 EWS 2023-10-03 23:21:57 PDT
Committed 268829@main (be1a2a2c2c65): <https://commits.webkit.org/268829@main>

Reviewed commits have been landed. Closing PR #18605 and removing active labels.