evaluateJavaScript:inFrame: doesn't work with site isolation https://bugs.webkit.org/show_bug.cgi?id=262599 rdar://116442151

Reviewed by Alex Christensen.

If a remote page proxy exists, send the run JavaScript message to it.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::runJavaScriptInFrameInScriptWorld):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/268829@main